# vcp-screener

./: .gitignore  GUIDE.md  README.md  param_sweep.py  pyproject.toml  requirements.txt
src/vcp_screener/: config.py  db.py
src/vcp_screener/cli/: main.py
src/vcp_screener/dashboard/: app.py
src/vcp_screener/dashboard/components/: charts.py
src/vcp_screener/dashboard/pages/: backtest_page.py  market_page.py  portfolio_page.py  screener_page.py  signals_page.py  stock_detail_page.py
src/vcp_screener/models/: backtest.py  daily_price.py  portfolio.py  screening_result.py  stock.py
src/vcp_screener/scheduler/: daily_job.py
src/vcp_screener/services/: alerts.py  backtester.py  data_fetcher.py  indicators.py  market_regime.py  portfolio_manager.py  screener.py  trend_template.py  vcp_detector.py
tests/: test_indicators.py  test_portfolio.py  test_trend_template.py  test_vcp_detector.py
